--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <title>隐私政策</title>
 <h1 align="center">隐私政策</h1>
 <div style="margin-right: 20px;margin-left: 20px"><br>
-    　　 佰溯妙配为辽宁省李洋网络科技有限公司（以下简称“我们”）开发的互联网服务平台，我们非常重视用户的个人信息和隐私保护。您在使用我们产品及/或服务时，我们可能会收集和使用您的相关信息。我们希望通过本《隐私政策》向您说明，在使用我们产品及/服务时，我们如何收集、使用、分享、保存和管理这些信息。<br><br>
+    　　 佰溯妙配为昆明际飞仑网络科技有限公司（以下简称“我们”）开发的互联网服务平台，我们非常重视用户的个人信息和隐私保护。您在使用我们产品及/或服务时，我们可能会收集和使用您的相关信息。我们希望通过本《隐私政策》向您说明，在使用我们产品及/服务时，我们如何收集、使用、分享、保存和管理这些信息。<br><br>
     如您有任何疑问、意见或建议，您可通过以下联系方式与我们联系：<br>
     公司名称：昆明际飞仑网络科技有限公司<br>
     联系电话：16774831391<br>
