--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <title>隐私政策</title>
 <h1 align="center">隐私政策</h1>
 <div style="margin-right: 20px;margin-left: 20px"><br>
-    　　 佰朔为昆明际飞仑网络科技有限公司（以下简称“我们”）开发的互联网服务平台，我们非常重视用户的个人信息和隐私保护。您在使用我们产品及/或服务时，我们可能会收集和使用您的相关信息。我们希望通过本《隐私政策》向您说明，在使用我们产品及/服务时，我们如何收集、使用、分享、保存和管理这些信息。<br><br>
+    　　 佰朔悦配为北京首胜信息咨询有限公司（以下简称“我们”）开发的互联网服务平台，我们非常重视用户的个人信息和隐私保护。您在使用我们产品及/或服务时，我们可能会收集和使用您的相关信息。我们希望通过本《隐私政策》向您说明，在使用我们产品及/服务时，我们如何收集、使用、分享、保存和管理这些信息。<br><br>
     如您有任何疑问、意见或建议，您可通过以下联系方式与我们联系：<br>
-    公司名称：昆明际飞仑网络科技有限公司<br>
-    联系电话：16774831391<br>
-    联系邮箱：m16774831391@163.com<br>
-    注册地址：云南省昆明市盘龙区拓东街道环城东路303号 附1-PL<br>
-    常用办公地址： 云南省昆明市盘龙区拓东街道环城东路303号 附1-PL
+    公司名称：北京首胜信息咨询有限公司<br>
+    联系电话：1372897867<br>
+    联系邮箱：1372897867@qq.com<br>
+    注册地址：北京市延庆区沈家营镇综合文化中心办公楼872号<br>
+    常用办公地址： 北京市延庆区沈家营镇综合文化中心办公楼872号
     <br><br>
     本《隐私政策》将帮助您了解以下内容：<br><br>
     第一章 我们如何收集您的个人信息<br><br>
@@ -107,8 +107,7 @@
     2.4 当我们要将您的个人信息用于本政策未载明的其它用途时，或将基于特定目的收集而来的信息用于其他目的时，我们会主动事先征求您的明示同意。<br><br>
     <br><br>
     <h3>第三章 我们如何使用Cookie和同类技术</h3><br>
-    3.1 为了更好地向您提供我们产品及/或服务，我们使用了若干自动数据收集工具，目前包括Flash<br>
-    Cookies和内嵌Web链接。借助这些技术，我们能够实时了解您的偏好信息，从而为您提供流畅、优质、个性化的用户体验。我们不会将上述技术用于本政策所述目的之外的任何用途。请您理解，我们的某些服务只能通过使用上述技术才可得到实现。如您的设备或相关程序允许，您可以通过改变设置，或通过访问提供商的网页，来关闭或删除上述技术。但这一举动可能会影响您使用我们产品及/或服务。<br><br>
+    3.1 为了更好地向您提供我们产品，我们使用了若干自动数据收集工具，目前包括Flash、Cookies和内嵌Web链接。借助这些技术，我们能够更好地了解当前产品的使用情况，从而有助于改进我们的产品。我们不会将上述技术用于本政策所述目的之外的任何用途。请您理解，我们的某些服务只能通过使用上述技术才可得到实现。如您的设备或相关程序允许，您可以通过改变设置，来关闭或删除上述技术。但这一举动可能会影响您使用我们产品及/或服务。<br><br>
     <br><br>
     <h3>第四章 我们如何共享、转让、公开披露您的个人信息</h3><br>
     共享<br><br>
@@ -190,11 +189,11 @@
     <br><br>
     <h3>第十章 投诉及建议</h3><br>
     10.1 您在使用我们产品及/或服务的过程中，如果对本《隐私政策》有任何的疑义或建议，或您认为您的个人信息没有得到本《隐私政策》规定的保护，您可以通过以下方式联系我们，我们将真诚地处理您的投诉及建议。<br>
-    公司名称：昆明际飞仑网络科技有限公司<br>
-    联系电话：16774831391<br>
-    联系邮箱：m16774831391@163.com<br>
-    注册地址：云南省昆明市盘龙区拓东街道环城东路303号 附1-PL<br>
-    常用办公地址： 云南省昆明市盘龙区拓东街道环城东路303号 附1-PL
+    公司名称：北京首胜信息咨询有限公司<br>
+    联系电话：1372897867<br>
+    联系邮箱：1372897867@qq.com<br>
+    注册地址：北京市延庆区沈家营镇综合文化中心办公楼872号<br>
+    常用办公地址： 北京市延庆区沈家营镇综合文化中心办公楼872号
     <br><br>
 </div><br>
 </html><br>
